[project]
name = "stack-edits"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    { name = "Matthias Hericks", email = "hericks@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "polars>=1.19.0",
    "pydantic>=2.10.4",
    "requests>=2.32.3",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"